feat: production-ready AI interview studio with deploy button, build fixes, and resume knowledge base update